# youtubeless

./: README.md
backend/: .gitignore  Cargo.toml
backend/prisma/: schema.prisma
backend/prisma-cli/: Cargo.toml
backend/prisma/migrations/20240609162124_first_migration/: migration.sql
backend/prisma/migrations/20240609162309_test_migration/: migration.sql
backend/src/: main.rs  prisma.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx  variables.css
frontend/src/components/Channel/: Channel.css  Channel.tsx
frontend/src/components/Footer/: Footer.css  Footer.tsx
frontend/src/components/Navbar/: Navbar.css  Navbar.tsx
frontend/src/components/Search/: Search.css  Search.tsx
frontend/src/routes/: Root.css  Root.tsx
frontend/src/types/: channel.d.ts
