[workspace]
members = ["prisma-cli"]

[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version = "0.5.1", features = ["json"]}
tokio = "1.38.0"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = ["postgresql"]}
serde = {version = "1.0.203", features = ["derive"]}
